--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "expo": "^26.0.0",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
-    "react-native-elements": "^1.0.0-beta3"
+    "react-native-elements": "^1.0.0-beta4",
+    "native-base": "^2.4.1",
+    "react-native-tab-view": "^0.0.76",
+    "prop-types": "^15.6.0"
   }
 }
