--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "react-native-elements": "^1.0.0-beta4",
     "native-base": "^2.4.1",
     "react-native-tab-view": "^0.0.76",
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.0",
+    "react-native-fade-in-image": "1.3.0",
+    "react-native-read-more-text": "^1.0.0",
+    "react-native-animatable": "^1.2.4",
+    "react-navigation": "1.1.0-rc.4",
+    "moment-timezone": "^0.5.14"
   }
 }
